<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/dialog_round_bg"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/btn_quit"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/pro_quit"

        android:textColor="@drawable/selector_text_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_delayed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_view" />

    <TextView
        android:id="@+id/btn_delayed"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/pro_delayed"
        android:textColor="@drawable/selector_text_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_close"
        app:layout_constraintStart_toEndOf="@+id/btn_quit"
        app:layout_constraintTop_toBottomOf="@+id/password_view" />

    <TextView
        android:id="@+id/btn_close"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/pro_close"
        android:textColor="@drawable/selector_text_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_delayed"
        app:layout_constraintTop_toBottomOf="@+id/password_view" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/dialog_children_timeout_title"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/password_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:id="@+id/tv_password_tip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginBottom="@dimen/dp16"
            android:layout_marginTop="@dimen/dp32"
            android:gravity="center"
            android:text="@string/pro_children_mode_delay"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp48"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp48"
            android:layout_marginBottom="@dimen/dp16"
            android:ems="4"
            android:gravity="center"
            android:inputType="numberPassword"
            android:lines="1"
            android:maxLength="4"
            android:textSize="30sp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>